# FluidMoE

./: .gitignore  README.md  requirements.txt
docs/: fluidmoe_theory_analysis_zh.md  megatron_vs_baseline_analysis.md
examples/: kernel_top50.txt  pretrain_deepspeed.py  pretrain_fluidmoe.py  pretrain_gpt_moe.py  pretrain_megatron.py  run_test_2gpu.sh  run_test_4experts.sh  run_training.sh  wikitext_dataset.py
fluid/: __init__.py  attention_core.py  attention_layers.py  attention_module.py  chunk_reorder.py  chunked_moe.py  comm_queue.py  communication.py  megatron_layers.py  model.py  moe_layers.py  moe_module.py  multicard_p2p.py  optimizer_wrapper.py  overlap_forward.py  pretrain.py  scheduler.py  setup.py
fluid/attention/: __init__.py  backward.py  baseline.py  chunked_backward.py  forward.py  layer.py  p2p_overlap.py
fluid/core/: __init__.py  alltoall.py  comm.py  forward_comm.py  nvtx.py  overhead_profiler.py  p2p_backend.py  python_profile.py  scheduler.py  stream.py  te_ops.py  triton_kernels.py  utils.py
fluid/csrc/: __init__.py  nvshmem_ops.cpp
fluid/kernels/: CMakeLists.txt  build.sh  test_build.py
fluid/kernels/include/: gemm_grouped_with_epilogue_visitor.h  grouped_gemm.hpp  grouped_gemm_with_signal.hpp  utils.hpp
fluid/kernels/python/: binding.cpp
fluid/kernels/src/: alltoall_fc1_signal.cu  fc2_alltoall_signal.cu  grouped_gemm.cu  grouped_gemm_epilogue_signal.cu  moe_backward_fused.cu  moe_forward_fused.cu  stream_sync.cu
fluid/kernels/tests/: test_fused_moe.py
fluid/layer/: __init__.py  fluid_spec.py  transformer.py
fluid/layers/: __init__.py  megatron_integration.py  transformer.py
fluid/moe/: __init__.py  backward.py  baseline.py  chunked_backward.py  forward.py  layer.py  p2p_overlap.py  router.py
fluid/ops/: __init__.py  flash_overlap.py
fluid/tuning/: __init__.py  flash_overlap_tuner.py  overlap_tuner.py
fluid/tuning/configs/: flash_overlap_configs.json
tests/: ar_tune.py  baseline.py  bench_comm.py  benchmark.py  benchmark_fluid_full.py  benchmark_megatron_full_corrected.py  chunk_tune.py  comm_ratio_table.py  compare_baseline_megatron.py  deepspeed_ulysses_baseline.py  megatron_baseline.py  nsys_fluidmoe.py  overhead_profiler.py  overlap_ratio_analyzer.py  profile_nsys.py  quick_check.py  run_all_block_benchmarks.sh  run_block_benchmark.py  run_comm_ratio_table.sh  smoke_phase1.py  test_correctness.py  test_multicard_p2p.py  test_overlap_forward_speedup.py  test_transformer_speedup.py  tune.py
tools/: deepspeed_ulysses_baseline.py  experiment_configs.py  install.sh  megatron_baseline.py  model_configs.py  no_overlap_time_analyzer.py  overlap_ratio_analyzer.py  run_all_block_benchmarks.sh  run_block_benchmark.py  throughput_analyzer.py  tune.py
